Change java version / scala install has still  error

--- a/scala-2.13.1/Dockerfile
+++ b/scala-2.13.1/Dockerfile
@@ -1,18 +1,18 @@
 FROM debian
 
 #Installing java
-ADD openjdk-8u40-b25-linux-x64-10_feb_2015.tar.gz /~/java
-ENV JAVA_HOME /~/java/java-se-8u40-ri
-ENV PATH="/root/java/java-se-8u40-ri/bin:${PATH}"
+ADD jdk8u232-linux64.tar.gz /root/java/
+ENV JAVA_HOME /root/java/jdk8u232
+ENV PATH="/root/java/jdk8u232/bin:${PATH}"
 
 #Installing wget
 RUN apt-get update && apt-get install -y wget
 
 #Installing scala
 #RUN wget https://downloads.lightbend.com/scala/2.13.1/scala-2.13.1.deb  -P /~
-RUN mkdir /~/scala
-COPY scala-2.12.10.deb /~/scala
-RUN dpkg -i /~/scala/scala-2.12.10.deb
+RUN mkdir /root/scala
+COPY scala-2.12.8.deb /root/scala
+RUN dpkg -i /root/scala/scala-2.12.8.deb
 
 
 CMD ["/bin/bash"]
