--- a/myvim/Dockerfile
+++ b/myvim/Dockerfile
@@ -1,7 +1,7 @@
-FROM scala:2.13.1
+FROM ubuntu-jdk-scala:2.1
 
 
-RUN apt-get update && apt install -y  libncurses5-dev libgnome2-dev libgnomeui-dev \
+RUN apt-get update && apt-get -f install -y libncurses5-dev libgnome2-dev libgnomeui-dev \
 	libgtk2.0-dev libatk1.0-dev libbonoboui2-dev \
 	libcairo2-dev libx11-dev libxpm-dev libxt-dev python-dev \
 	python3-dev ruby-dev lua5.1 liblua5.1-dev libperl-dev git
