--- a/play-scala-seed/conf/application.conf
+++ b/play-scala-seed/conf/application.conf
@@ -1,3 +1,10 @@
 # https://www.playframework.com/documentation/latest/Configuration
 
 play.http.secret.key=ad31779d4ee49d5ad5162bf1429c32e2e9933f3b
+
+
+play.filters.enabled += play.filters.hosts.AllowedHostsFilter
+play.filters.hosts {
+# Allow requests to example.com, its subdomains, and localhost:9000.
+   allowed = ["."]
+}
